<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_dropdown"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/border_dorpdown"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/recyclerview"
        android:textColor="#535252"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/bt_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gas Buka"
        android:backgroundTint="@color/steel_blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <ScrollView
        android:id="@+id/sv_tugas"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dropdown"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_recyclerView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginEnd="128dp"
                android:background="@color/steel_blue"
                android:gravity="center"
                android:text="@string/recyclerview"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_appBar"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="128dp"
                android:background="@color/cyan"
                android:gravity="center"
                android:text="@string/app_bar_actionbar_toolbar"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_navigationDrawer"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="128dp"
                android:background="@color/teal_blue"
                android:gravity="center"
                android:text="@string/navigation_drawer"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bottomNavigation"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="128dp"
                android:background="@color/leaf_green"
                android:gravity="center"
                android:text="@string/bottom_navigation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tabLayout"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="128dp"
                android:background="@color/orange"
                android:gravity="center"
                android:text="@string/tab_layout"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_jsonApiDanRetrofit"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="128dp"
                android:background="@color/reddish_orange"
                android:gravity="center"
                android:text="@string/json_api_dan_retrofit"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_viewModel"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="128dp"
                android:background="@color/pink"
                android:gravity="center"
                android:text="@string/view_model"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sharedPreference"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="128dp"
                android:background="@color/purple"
                android:gravity="center"
                android:text="@string/sharedpreference"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_animation"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="320dp"
                android:layout_marginEnd="128dp"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/animation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_brainTrainer"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="360dp"
                android:layout_marginEnd="128dp"
                android:background="@color/dark_purple"
                android:gravity="center"
                android:text="@string/brain_trainer_apps"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_room"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="128dp"
                android:background="@color/dark_blue"
                android:gravity="center"
                android:text="@string/room"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alaramManager"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="128dp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/alaram_manager"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_workManager"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="480dp"
                android:layout_marginEnd="128dp"
                android:background="@color/light_teal_blue"
                android:gravity="center"
                android:text="@string/work_manager"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>